# purposeguard

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASKS.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: RESULTS.md  adversarial.py  baseline_lexical.json  baselines.py  calibrate.py  generate.py  latency.py  run.py  traces.py
examples/: _scorer.py  drift_demo.py  langchain_example.py  mcp_server_example.py  mem0_example.py  raw_store_example.py
purposeguard/: __init__.py  drift.py  guard.py  presets.py  scoring.py  types.py
purposeguard/adapters/: __init__.py  langchain.py  mcp.py  mem0.py  owasp_amg.py  raw.py
tests/: test_adapters_langchain.py  test_adapters_mcp.py  test_adapters_mem0.py  test_adapters_owasp_amg.py  test_adapters_raw.py  test_anchored_drift.py  test_benchmark.py  test_core.py  test_evasion.py  test_fallback.py  test_modes.py  test_observability.py  test_perf_async.py  test_presets_and_scoring.py  test_readme_presets.py  test_response_drift.py  test_scope_anchors.py  test_scorer_selection.py
