[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "purposeguard"
version = "0.3.0"
description = "Drift + scope guardrail for AI agents: purpose/mission observability that keeps your agent in its lane."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "PurposeGuard contributors" }]
keywords = ["ai", "agents", "memory", "drift", "llm", "guardrails", "owasp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# Base install is intentionally dependency-light: it runs out of the box with
# the lexical fallback scorer and the standard library. No heavy ML deps forced
# on adopters who just want to try it.
dependencies = []

[project.optional-dependencies]
# Opt-in to local-embedding scoring for much better accuracy. This is the
# recommended default for real deployments.
embeddings = ["sentence-transformers>=2.2", "numpy>=1.21"]
# Dev/test tooling.
dev = ["pytest>=7", "coverage>=7"]
# Linting + type checking.
lint = ["ruff>=0.6", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/AdamSh01/purposeguard"
Issues = "https://github.com/AdamSh01/purposeguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["purposeguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Long lines live in docstrings/comments (the WHY-not-just-what style); not worth churning.
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
# Lenient on purpose: the core is typed at the boundaries (dataclasses, Protocol)
# but not exhaustively annotated. Missing third-party stubs (the optional ML deps)
# must not fail the check.
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = false

[tool.coverage.run]
source = ["purposeguard"]
branch = true

[tool.coverage.report]
show_missing = true
